--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Bookmark landing page solution built with ReactJs and Sass, by Austinet" />
     <title>Austinet | Frontend Mentor Bookmark landing page</title>
   </head>
   <body>
